k8s/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: event-app
spec:
  selector:
    app: auth
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
